# sentiment_translate

./: README.md  changes.bundle
cores/docs/: Integrating Kedro, MLflow, and Prefect.md
cores/industry_template/ai_core_template/: .gitignore  README.md  ai_core_README_template.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
cores/industry_template/ai_core_template/app/: app.py
cores/industry_template/ai_core_template/configs/: project_config.yaml
cores/industry_template/ai_core_template/docs/: ai_product_canvas.md  api_specification.md  runbook.md  technical_design.md  user_guide.md
cores/industry_template/ai_core_template/feature_repo/: feature_store.yaml  features.py
cores/marketing/voice-of-client/: .gitignore  README.md  debug_tm.py  pyproject.toml  re-evaluate_tm.py  requirements.txt  root_context.md  setup.py
cores/marketing/voice-of-client/.gemini/: temporal_analysis_enhancements.md
cores/marketing/voice-of-client/.viz/: stats.json
cores/marketing/voice-of-client/app/: app.py  config.py  logic.py  streamlit.md  styles.py  utils.py
cores/marketing/voice-of-client/app/components/: account_intelligence.py  action_center.py  customer_sentiment.py  executive_summary.py  key_insights.py  sidebar.py  strategic_intelligence.py  temporal_analysis.py  voice_of_client.py
cores/marketing/voice-of-client/conf/: README.md
cores/marketing/voice-of-client/conf/base/: catalog.yml  parameters.yml
cores/marketing/voice-of-client/conf/local/: mlflow.yml
cores/marketing/voice-of-client/configs/: README.md  project_config.yaml
cores/marketing/voice-of-client/docker/: Dockerfile
cores/marketing/voice-of-client/docs/: ai_product_canvas.md  api_specification.md  architecture_overview.md  research_brief.md  review.md  runbook.md  technical_design.md  user_guide.md
cores/marketing/voice-of-client/feature_repo/: entities.py  feature_store.yaml
cores/marketing/voice-of-client/mlruns/0/: meta.yaml
cores/marketing/voice-of-client/mlruns/498235928525987630/: meta.yaml
cores/marketing/voice-of-client/notebooks/: 01_data_exploration.ipynb
cores/marketing/voice-of-client/scripts/: create_new_core.py  empty_torch_cache.py
cores/marketing/voice-of-client/src/ai_core/: __main__.py  kedro.md  pipeline_registry.py  settings.py
cores/marketing/voice-of-client/src/ai_core/datasets/: polars_delta_dataset.py
cores/marketing/voice-of-client/src/ai_core/pipelines/data_processing/: nodes.py  pipeline.py
cores/marketing/voice-of-client/src/ai_core/pipelines/data_science/: pipeline.py
cores/marketing/voice-of-client/src/ai_core/pipelines/data_science/absa/: nodes.py  pipeline.py
cores/marketing/voice-of-client/src/ai_core/pipelines/data_science/analysis/: nodes.py  pipeline.py
cores/marketing/voice-of-client/src/ai_core/pipelines/data_science/churn_prediction/: nodes.py  pipeline.py
cores/marketing/voice-of-client/src/ai_core/pipelines/data_science/mer/: nodes.py  pipeline.py
cores/marketing/voice-of-client/src/ai_core/pipelines/data_science/ratings_prediction/: nodes.py  pipeline.py
cores/marketing/voice-of-client/src/ai_core/pipelines/data_science/sentiment_scoring/: nodes.py  pipeline.py
cores/marketing/voice-of-client/src/ai_core/pipelines/data_science/topic_modeling/: nodes.py  pipeline.py
cores/marketing/voice-of-client/src/ai_core/pipelines/monitoring/: nodes.py  pipeline.py
cores/marketing/voice-of-client/src/ai_core/pipelines/visualization/: nodes.py  pipeline.py
cores/marketing/voice-of-client/src/core/: kedro_pipeline.py
cores/marketing/voice-of-client/src/prefect_orchestration/: ai_pipeline.py  data_pipeline.py  monitoring_pipeline.py  prefect.md  run_all_pipelines.py  visualization_pipeline.py
cores/marketing/voice-of-client/src/utils/: __init__.py  config_loader.py  device.py
cores/marketing/voice-of-client/tests/: test_db.py  verify_language_detection.py
cores/marketing/voice-of-client/tests/unit/: test_data_processing.py  test_data_processing_nodes.py
cores/media_entertainment/CLTV-predictor/: .gitignore  README.md  pyproject.toml  root_context.md  test_load_model.py
cores/media_entertainment/churn-forecasting/: CLAUDE.md  README.md  debug_nodes.py  log.txt  pyproject.toml  root_context.md
cores/media_entertainment/customer-survival-analyzer/: README.md  pyproject.toml  root_context.md
cores/media_entertainment/predictive-CLTV-insights/: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  root_context.md  test_xpu_setup.py
cores/retail_cpg/customer-lifetime-value-CLTV-forecasting/: .env.example  .gitignore  README.md  pyproject.toml  root_context.md
cores/retail_cpg/voice-of-customer/: README.md  pyproject.toml  root_context.md
cores/retail_cpg/voice-of-customer/app/: app.py  (+3 more)
docs/: Architecture.md  Contributing.md  Glossary.md  Standards.md
(+284 files in other folders)
